--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/guard.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/guard.yml
@@ -59,3 +59,17 @@
   id: CP14ClothingShirtGuardsChainmailShirtB
   equipment:
     shirt: CP14ClothingShirtGuardsChainmailShirtB
+
+# Spells
+
+- type: loadoutGroup
+  id: CP14GuardSpells
+  name: cp14-loadout-guard-spells
+  loadouts:
+  - CP14ActionSpellFlashLight
+
+- type: loadout
+  id: CP14ActionSpellFlashLight
+  dummyEntity: CP14ActionSpellFlashLight
+  actions:
+  - CP14ActionSpellFlashLight
