--- a/Resources/Prototypes/_CP14/LockCategories/LockCategory.yml
+++ b/Resources/Prototypes/_CP14/LockCategories/LockCategory.yml
@@ -24,7 +24,7 @@
   id: BankSafe
   complexity: 5
 
-# Tavern 
+# Tavern
 
 - type: CP14LockCategory
   id: TavernHall
@@ -55,7 +55,7 @@
   id: TavernDorms5
   complexity: 3
 
-# Mercenary 
+# Mercenary
 
 - type: CP14LockCategory
   id: Alchemy
@@ -64,3 +64,21 @@
 - type: CP14LockCategory
   id: Blacksmith
   complexity: 5
+
+# Guard
+
+- type: CP14LockCategory
+  id: Guard
+  complexity: 5
+
+- type: CP14LockCategory
+  id: GuardEntrance
+  complexity: 3
+
+- type: CP14LockCategory
+  id: GuardCommandant
+  complexity: 7
+
+- type: CP14LockCategory
+  id: GuardWeaponStorage
+  complexity: 7
