remove jewerly slot, add more clothing states

--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/skeleton.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/skeleton.yml
@@ -19,7 +19,7 @@
 - type: entity
   id: SpawnPointGhostDemiplaneSkeleton
   name: ghost role spawn point
-  suffix: rat king
+  suffix: skeleton
   categories: [ ForkFiltered ]
   parent: MarkerBase
   components:
