--- a/Resources/Prototypes/_CP14/Catalog/Fills/crates.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/crates.yml
@@ -52,7 +52,7 @@
       - id: CP14Torch
       - id: CP14Lighter
       - id: CP14ManaOperationGlove
-      - id: CP14BaseShovel
+      - id: CP14ModularIronShovel
       - id: CP14BaseMop
       - id: CP14BaseBroom
       - id: CP14BasePickaxe
