--- a/Resources/Prototypes/_CP14/tools.yml
+++ b/Resources/Prototypes/_CP14/tools.yml
@@ -2,8 +2,8 @@
   id: CP14Digging
   name: cp14-tool-quality-digging-name
   toolName: cp14-tool-quality-digging-tool-name
-  spawn: CP14BaseShovel
-  icon: { sprite: _CP14/Objects/Weapons/Melee/Shovel/shovel.rsi, state: icon}
+  spawn: CP14ModularIronShovel
+  icon: { sprite: _CP14/Objects/ModularTools/iron_shovel.rsi, state: icon}
 
 - type:  tool
   id: CP14Hammering
