--- a/Resources/Prototypes/_CP14/Guidebook/Eng/alchemy.yml
+++ b/Resources/Prototypes/_CP14/Guidebook/Eng/alchemy.yml
@@ -28,3 +28,10 @@
   name: Demiplanes exploration
   text: "/ServerInfo/_CP14/Guidebook_EN/Demiplanes.xml"
   filterEnabled: True
+
+- type: guideEntry
+  crystallPunkAllowed: true
+  id: CP14_EN_Imperial_Laws
+  name: Imperial laws
+  text: "/ServerInfo/_CP14/Guidebook_EN/ImperialLaws.xml"
+  filterEnabled: True
