--- a/Resources/Prototypes/_CP14/Guidebook/Ru/alchemy.yml
+++ b/Resources/Prototypes/_CP14/Guidebook/Ru/alchemy.yml
@@ -28,3 +28,10 @@
   name: Исследование демипланов
   text: "/ServerInfo/_CP14/Guidebook_RU/Demiplanes.xml"
   filterEnabled: True
+
+- type: guideEntry
+  crystallPunkAllowed: true
+  id: CP14_RU_Imperial_Laws
+  name: Имперские законы
+  text: "/ServerInfo/_CP14/Guidebook_RU/ImperialLaws.xml"
+  filterEnabled: True
