--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -15,7 +15,7 @@ CP14ClothingShirtHarlequineRed: CP14ClothingShirtCottonBlack
 
 # 2024-07-18
 CP14ClothingShirtCottonBlueDark: CP14ClothingShirtCottonBlack
-CP14Shovel: CP14BaseShovel
+CP14Shovel: CP14ModularIronShovel
 CP14Hoe: CP14BaseHoe
 CP14WallStoneSilverOre: CP14WallStoneGoldOre
 
