--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/base.yml
@@ -1,7 +1,7 @@
 - type: entity
   abstract: true
   id: CP14BaseWeaponChemical
-  categories: [ HideSpawnMenu ]
+  categories: [ HideSpawnMenu, ForkFiltered ]
   components:
   - type: SolutionContainerManager
     solutions:
@@ -22,7 +22,7 @@
 - type: entity
   abstract: true
   id: CP14BaseWeaponThrowable
-  categories: [ HideSpawnMenu ]
+  categories: [ HideSpawnMenu, ForkFiltered ]
   components:
   - type: LandAtCursor
   - type: DamageOtherOnHit
@@ -51,7 +51,7 @@
 - type: entity
   abstract: true
   id: CP14BaseWeaponLight
-  categories: [ HideSpawnMenu ]
+  categories: [ HideSpawnMenu, ForkFiltered ]
   components:
   - type: MeleeWeapon
     resetOnHandSelected: false
@@ -59,7 +59,7 @@
 - type: entity
   abstract: true
   id: CP14BaseWeaponShort
-  categories: [ HideSpawnMenu ]
+  categories: [ HideSpawnMenu, ForkFiltered ]
   components:
   - type: MeleeWeapon
     range: 1.0 # 1.5 standart
@@ -68,7 +68,7 @@
 - type: entity
   abstract: true
   id: CP14BaseWeaponSharp
-  categories: [ HideSpawnMenu ]
+  categories: [ HideSpawnMenu, ForkFiltered ]
   components:
   - type: Sharp
   - type: CP14Sharpened
@@ -87,7 +87,7 @@
 - type: entity
   abstract: true
   id: CP14BaseWeaponDestructible
-  categories: [ HideSpawnMenu ]
+  categories: [ HideSpawnMenu, ForkFiltered ]
   components:
   - type: ExaminableDamage
     messages: CP14WeaponMessages
@@ -109,7 +109,7 @@
 - type: entity
   abstract: true
   id: CP14BaseWeaponSelfDamage
-  categories: [ HideSpawnMenu ]
+  categories: [ HideSpawnMenu, ForkFiltered ]
   components:
   - type: CP14MeleeSelfDamage
     damageToSelf:
