--- a/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
@@ -104,3 +104,16 @@
               - id: CP14SilverCoin
             rolls: !type:ConstantNumberSelector
               value: 5
+
+- type: entity
+  parent: CP14WoodenCloset
+  id: CP14WoodenClosetBlacksmithFilled
+  suffix: Blacksmith, Filled
+  #components:
+  #- type: StorageFill
+  #  contents:
+  #    - id: CP14KeyRingCommandant
+  #    - id: HandLabeler #TODO custom cp14 labeler
+  #    - id: CP14StampDenied
+  #    - id: CP14StampApproved
+  #    - id: CP14StampCommandant
