--- a/Resources/Prototypes/_CP14/Tiles/produced.yml
+++ b/Resources/Prototypes/_CP14/Tiles/produced.yml
@@ -62,6 +62,39 @@
 
 - type: tile
   editorHidden: false
+  id: CP14FloorStonebricksWeather
+  name: cp14-tiles-stonebricks-weather
+  sprite: /Textures/_CP14/Tiles/Stonebricks/stonebricks.png
+  variants: 9
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  edgeSpritePriority: 101
+  edgeSprites:
+    SouthEast: /Textures/_CP14/Tiles/Stonebricks/single_edge_SE.png
+    NorthEast: /Textures/_CP14/Tiles/Stonebricks/single_edge_NE.png
+    NorthWest: /Textures/_CP14/Tiles/Stonebricks/single_edge_NW.png
+    SouthWest: /Textures/_CP14/Tiles/Stonebricks/single_edge_SW.png
+    South: /Textures/_CP14/Tiles/Stonebricks/double_edge_S.png
+    East: /Textures/_CP14/Tiles/Stonebricks/double_edge_E.png
+    North: /Textures/_CP14/Tiles/Stonebricks/double_edge_N.png
+    West: /Textures/_CP14/Tiles/Stonebricks/double_edge_W.png
+  baseTurf: CP14FloorFoundation
+  isSubfloor: false
+  footstepSounds:
+    collection: FootstepAsteroid
+  heatCapacity: 10000
+  weather: true
+
+- type: tile
+  editorHidden: false
   id: CP14FloorStonebricksSmallCarved1
   name: cp14-tiles-stonebricks-small-carved1
   sprite: /Textures/_CP14/Tiles/Stonebricks/stonebricks_small_carved_1.png
