--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/dagger.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/dagger.yml
@@ -28,6 +28,9 @@
     newSize: Normal
     adjustShape: 0, 1
     storedOffsetBonus: 0, 5
+  - !type:EditModularSlots
+    addSlots:
+    - Garde
 
 - type: modularPart
   id: BladeIronDagger
