--- a/Resources/Prototypes/_CP14/Recipes/Workbench/anvil.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/anvil.yml
@@ -240,3 +240,51 @@
   stacks:
     CP14CopperBar: 1
   result: CP14ModularBladeCopperDagger
+
+- type: CP14Recipe
+  id: CP14ModularGardeSharpCopper
+  tag: CP14RecipeAnvil
+  craftTime: 4
+  stacks:
+    CP14CopperBar: 1
+  result: CP14ModularGardeSharpCopper
+
+- type: CP14Recipe
+  id: CP14ModularGardeSharpIron
+  tag: CP14RecipeAnvil
+  craftTime: 4
+  stacks:
+    CP14IronBar: 1
+  result: CP14ModularGardeSharpIron
+
+- type: CP14Recipe
+  id: CP14ModularGardeSharpGold
+  tag: CP14RecipeAnvil
+  craftTime: 4
+  stacks:
+    CP14GoldBar: 1
+  result: CP14ModularGardeSharpGold
+
+- type: CP14Recipe
+  id: CP14ModularBladeIronRapier
+  tag: CP14RecipeAnvil
+  craftTime: 4
+  stacks:
+    CP14IronBar: 1
+  result: CP14ModularBladeIronRapier
+
+- type: CP14Recipe
+  id: CP14ModularBladeGoldRapier
+  tag: CP14RecipeAnvil
+  craftTime: 4
+  stacks:
+    CP14GoldBar: 1
+  result: CP14ModularBladeGoldRapier
+
+- type: CP14Recipe
+  id: CP14ModularBladeCopperRapier
+  tag: CP14RecipeAnvil
+  craftTime: 4
+  stacks:
+    CP14CopperBar: 1
+  result: CP14ModularBladeCopperRapier
