--- a/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/produce.yml
@@ -320,3 +320,43 @@
   - type: FoodSequenceElement
     entries:
       CP14Plate: CP14PlateTomatoesSlice
+
+- type: entity
+  id: CP14FoodGlowingFruit
+  parent: FoodInjectableBase
+  categories: [ ForkFiltered ]
+  name: glowing fruit
+  description: Glowing Fruit. Exudes mana.
+  components:
+  - type: PointLight
+    radius: 1.3
+    energy: 2
+    color: "#87CEEB"
+  - type: Item
+    size: Tiny
+  - type: FlavorProfile
+    flavors:
+      - CP14Magic
+  - type: Sprite
+    sprite: _CP14/Objects/Flora/Farm/glowing_fruit.rsi
+    layers:
+      - state: base1
+        map: [ "random" ]
+  - type: RandomSprite
+    available:
+      - random:
+          base1: ""
+          base2: ""
+          base3: ""
+          base4: ""
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 11
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 4
+        - ReagentId: Vitamin
+          Quantity: 2
+        - ReagentId: CP14BlueAmanita
+          Quantity: 3
